force-app/main/default/objects/Consent_Preference__c/Consent_Preference__c.object-meta.xml
<CustomObject>
    <label>Consent Preference</label>
    <pluralLabel>Consent Preferences</pluralLabel>
    <description>Per channel, per purpose consent with evidence. Anonymised records are retention tombstones and are never deleted.</description>
</CustomObject>