force-app/main/default/objects/Consent_Preference__c/fields/Ad_Use_Permission__c.field-meta.xml
<CustomField>
    <fullName>Ad_Use_Permission__c</fullName>
    <label>Ad_Use_Permission</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>