force-app/main/default/objects/Consent_Preference__c/fields/CapturedDate__c.field-meta.xml
<CustomField>
    <fullName>CapturedDate__c</fullName>
    <label>Captured Date</label>
    <type>DateTime</type>
</CustomField>