force-app/main/default/objects/Consent_Preference__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact_Master__c</referenceTo>
</CustomField>