force-app/main/default/objects/Consent_Preference__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>