force-app/main/default/objects/Consent_Preference__c/fields/ExpiresOn__c.field-meta.xml
<CustomField>
    <fullName>ExpiresOn__c</fullName>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>