force-app/main/default/objects/Consent_Preference__c/fields/Hashed_Contact_Key__c.field-meta.xml
<CustomField>
    <fullName>Hashed_Contact_Key__c</fullName>
    <label>Hashed_Contact_Key</label>
    <type>Text</type>
    <length>64</length>
</CustomField>