force-app/main/default/objects/Consent_Preference__c/fields/Is_Tombstone__c.field-meta.xml
<CustomField>
    <fullName>Is_Tombstone__c</fullName>
    <label>Is_Tombstone</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>