force-app/main/default/objects/Consent_Preference__c/fields/OptedOutDate__c.field-meta.xml
<CustomField>
    <fullName>OptedOutDate__c</fullName>
    <label>Opted Out Date</label>
    <type>DateTime</type>
</CustomField>