force-app/main/default/objects/Consent_Preference__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose  c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition><value><fullName>Marketing</fullName><label>Marketing</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Transactional</fullName><label>Transactional</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Analytics</fullName><label>Analytics</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Advertising</fullName><label>Advertising</label></value></valueSetDefinition>
    </valueSet>
</CustomField>