force-app/main/default/objects/Consent_Preference__c/fields/RecordedBy__c.field-meta.xml
<CustomField>
    <fullName>RecordedBy__c</fullName>
    <label>Recorded By</label>
    <type>Text</type>
    <length>80</length>
</CustomField>