force-app/main/default/objects/Consent_Preference__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source  c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition><value><fullName>WebBanner</fullName><label>WebBanner</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>App</fullName><label>App</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>CallCentre</fullName><label>CallCentre</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Import</fullName><label>Import</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Keyword</fullName><label>Keyword</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>CRM</fullName><label>CRM</label></value></valueSetDefinition>
    </valueSet>
</CustomField>