force-app/main/default/objects/Consent_Preference__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status  c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition><value><fullName>OptedIn</fullName><label>OptedIn</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>OptedOut</fullName><label>OptedOut</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Pending</fullName><label>Pending</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Transferred</fullName><label>Transferred</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Expired</fullName><label>Expired</label></value></valueSetDefinition>
    </valueSet>
</CustomField>